--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   cached_network_image: ^3.1.0
   flutter_bloc: ^7.2.0
+  provider: ^6.0.0
+  sqflite: ^2.0.0+3
+  path_provider: ^2.0.2
 
 dev_dependencies:
   flutter_test:
