--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   provider: ^6.0.0
   sqflite: ^2.0.0+3
   path_provider: ^2.0.2
+  dio: ^4.0.0
 
 dev_dependencies:
   flutter_test:
