--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   sqflite: ^2.0.0+3
   path_provider: ^2.0.2
   dio: ^4.0.0
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
